# kwin-effects-better-blur-dx-wobbly

./: CHANGELOG.md  CMakeLists.txt  README.md
docs/: debugging.md  inter-effect-api.md
nix/: package-x11.nix  package.nix
src/: CMakeLists.txt  better_blur_dx_api.hpp  blur.cpp  blur.h  blur.qrc  blur_cache.cpp  blur_cache.hpp  blur_extensions.cpp  blur_wobbly_api.qrc  kwin_compat.hpp  kwin_compat_6_6.hpp  kwin_compat_x11.hpp  metadata.json  refraction_pass.cpp  refraction_pass.hpp  rounded_corners_pass.cpp  rounded_corners_pass.hpp  texture_comparer.cpp  texture_comparer.hpp  utils.cpp  utils.h  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/kcm/: CMakeLists.txt  about.html  blur_config.cpp  blur_config.ui  blur_wobbly_api_config.qrc
src/shaders/: texture_compare.frag  texture_compare_and_update.comp  texture_compare_and_update.frag  texture_compare_and_update.vert  texture_compare_core.frag  wobbly_composite.frag  wobbly_composite_core.frag
